temp/prometheus-grafana/scraping-bigip copy.yml
apiVersion: v1
kind: Endpoints
metadata:
    name: bigip-metrics
    labels:
        k8s-app: bigip-metrics
subsets:
    - ip: 192.168.3.103
ports:
    - name: metrics
      port: 443
      protocol: TCP
