temp/prometheus-grafana/scraping-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-metrics
  namespace: nginx
  labels:
    type: nginx-plus
spec:
  ports:
  - port: 9113
    protocol: TCP
    targetPort: 9113
    name: prometheus
  selector:
    app: nginx-plus
