temp/prometheus-grafana/monitoring-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /test-kibana
  # enable to use secure backend
  #  nginx.org/ssl-services: "kubernetes-dashboard"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: prometheus.f5demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /test-kibana
  # enable to use secure backend
  #  nginx.org/ssl-services: "kubernetes-dashboard"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: grafana.f5demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
